# tomin

./: .gitignore  README.md  supabase_setup.sql
backend/: .env  .env.example  .gitignore  .vercelignore  DEPLOYMENT_FIX.md  README.md  SETUP.md  alembic.ini  fastapi-gen.json  pyproject.toml  requirements.txt  setup.sh  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: f6ba4e9328e3_create_users_table.py
backend/api/: index.py
backend/src/: __init__.py  index.py  main.py
backend/src/application/: __init__.py
backend/src/application/dtos/: financial_dtos.py  forecast_dtos.py
backend/src/application/use_cases/: adjust_forecast.py  detect_recurrent_transactions.py  detect_recurring_transactions.py  generate_forecast.py  get_financial_summary.py  get_recurring_transactions.py  get_spending_distribution.py  get_statements.py  identify_merchants.py  process_bank_statement.py  suggest_optimizations.py
backend/src/config/: __init__.py  jwt_config.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  models.py  user.py
backend/src/domain/repositories/: interfaces.py  user_repository.py
backend/src/infrastructure/: __init__.py  auth.py  database.py  main.py  models.py  notifications.py  repositories.py  supabase_repositories.py
backend/src/infrastructure/api/: __init__.py  forecast.py  merchants.py  notifications.py  statements.py  transactions.py
backend/src/infrastructure/api/dependencies/: auth_dependencies.py
backend/src/infrastructure/api/routes/: __init__.py
backend/src/infrastructure/api/v1/endpoints/: auth.py  health.py
backend/src/infrastructure/parsers/: bank_parsers.py  base.py  factory.py
backend/src/infrastructure/persistence/: database.py
backend/src/infrastructure/persistence/models/: user_model.py
backend/src/infrastructure/persistence/repositories/: user_repository_impl.py
backend/src/infrastructure/services/: auth_service.py  jwt_service.py  oauth_utils.py
backend/tests/: test_detect_recurring_transactions.py  test_get_spending_distribution.py  test_main.py
frontend/: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/forecasts/: page.tsx
frontend/src/app/login/: actions.ts  page.tsx
frontend/src/contexts/: AuthContext.tsx  FilterContext.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/lib/: api-client.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/services/: api.ts
infrastructure/: README.md
infrastructure/terraform/: main.tf
mocks/financial_forecasts_&_optimization/: code.html
mocks/financial_overview_dashboard/: code.html
mocks/spending_insights/: code.html
mocks/stitch_transaction_management_filters /: code.html
mocks/tomin_landing_page/: code.html
mocks/transaction_management_&_filters/: code.html
mocks/user_profile_&_settings/: code.html
(+30 files in other folders)
