[project]
name = "tomin-backend"
version = "0.1.0"
description = "AI-powered financial analysis tool backend"
authors = [{ name = "Tomin Team" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "pandas",
    "httpx",
    "pypdf",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
